--- a/gwindows/azip.rc
+++ b/gwindows/azip.rc
@@ -156,7 +156,7 @@ Menu_MDI_Main MENU
             MENUITEM "mru_9", IDM_MRU_9
         }
         MENUITEM SEPARATOR
-        MENUITEM "&Quit\tAlt+F4", IDM__QUIT
+        MENUITEM "&Quit\tCtrl+W / Alt+F4", IDM__QUIT
     }
     POPUP "&Options"
     {
