--- a/gwindows/azip.rc
+++ b/gwindows/azip.rc
@@ -81,6 +81,7 @@ Menu_MDI_Child MENU
     {
         MENUITEM "Select &all\tCtrl+A", IDM_Select_all
         MENUITEM "&Unselect all\tCtrl+U", IDM_Unselect_all
+        MENUITEM "&Invert selection\tCtrl+I", IDM_Invert_Selection
         MENUITEM "&Extract...\tCtrl+E", IDM_EXTRACT
         MENUITEM SEPARATOR
         MENUITEM "Delete entries\tDel / -", IDM_Delete_selected
@@ -318,8 +319,8 @@ FONT 8, "Ms Shell Dlg"
     RTEXT           "Extensions", 0, 231, 134, 42, 13, SS_RIGHT, WS_EX_LEFT
     PUSHBUTTON      "Choose", Button_extension_choose, 280, 132, 38, 15, 0, WS_EX_LEFT
     LTEXT           "Note on first visit", Label_Install_note_first_visit, 15, 165, 312, 11, SS_LEFT, WS_EX_LEFT
-    DEFPUSHBUTTON   "Close",                    IDOK,                     27, 185, 89, 17, 0, WS_EX_LEFT
-    DEFPUSHBUTTON   "Install for all users",    ID_Install_all_users,    127, 185, 89, 17, 0, WS_EX_LEFT
+    DEFPUSHBUTTON   "Close", IDOK, 27, 185, 89, 17, 0, WS_EX_LEFT
+    DEFPUSHBUTTON   "Install for all users", ID_Install_all_users, 127, 185, 89, 17, 0, WS_EX_LEFT
     DEFPUSHBUTTON   "Install for current user", ID_Install_current_user, 227, 185, 89, 17, 0, WS_EX_LEFT
 }
 
@@ -521,6 +522,7 @@ Main_Menu ACCELERATORS
     "W",            IDM__CLOSE_ARCHIVE, VIRTKEY, CONTROL
     "A",            IDM_Select_all, VIRTKEY, CONTROL
     "U",            IDM_Unselect_all, VIRTKEY, CONTROL
+    "I",            IDM_Invert_Selection, VIRTKEY, CONTROL
     "E",            IDM_EXTRACT, VIRTKEY, CONTROL
     VK_DELETE,     IDM_Delete_selected, VIRTKEY
     VK_SUBTRACT,   IDM_Delete_selected, VIRTKEY
@@ -612,7 +614,7 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
             VALUE "Authors", "Gautier de Montmollin"
             VALUE "FileDescription", "AZip - A portable Zip Archive Manager - Free, MIT license"
             VALUE "FileVersion", "2.40"
-            VALUE "LegalCopyright", "Copyright © Gautier de Montmollin 2012 .. 2020"
+            VALUE "LegalCopyright", "Copyright © Gautier de Montmollin 2012 .. 2021"
             VALUE "ProductName", "AZip"
         }
     }
