--- a/gwindows/azip.rc
+++ b/gwindows/azip.rc
@@ -397,21 +397,22 @@ FONT 8, "Ms Shell Dlg"
 
 
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
-Properties_box DIALOG 0, 0, 265, 166
+Properties_box DIALOG 0, 0, 335, 200
 STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP
 CAPTION "Archive properties"
 FONT 8, "Ms Shell Dlg"
 {
-    LTEXT           "Uncompressed size", 0, 14, 6, 78, 13, SS_LEFT, WS_EX_LEFT
+    LTEXT           "Uncompressed size...", 0, 14, 6, 78, 13, SS_LEFT, WS_EX_LEFT
     EDITTEXT        Uncomp_size, 97, 6, 112, 12, NOT WS_BORDER | ES_AUTOHSCROLL | ES_READONLY, WS_EX_LEFT
-    LTEXT           "Compressed size", 1, 14, 23, 78, 13, SS_LEFT, WS_EX_LEFT
+    LTEXT           "Compressed size...", 1, 14, 23, 78, 13, SS_LEFT, WS_EX_LEFT
     EDITTEXT        Comp_size, 97, 23, 112, 12, NOT WS_BORDER | ES_AUTOHSCROLL | ES_READONLY, WS_EX_LEFT
-    LTEXT           "Ratio: 100%", Comp_ratio, 211, 23, 48, 16, SS_LEFT, WS_EX_LEFT
-    LTEXT           "Entries", 02, 14, 40, 78, 13, SS_LEFT, WS_EX_LEFT
-    LTEXT           "# entries", Numb_entries, 97, 40, 84, 12, SS_LEFT, WS_EX_LEFT
-    CONTROL         "", Stats_list, WC_LISTVIEW, WS_TABSTOP | WS_BORDER | LVS_ALIGNLEFT | LVS_REPORT, 14, 56, 236, 81, WS_EX_LEFT
-    DEFPUSHBUTTON   "OK", IDOK, 51, 142, 64, 19, 0, WS_EX_LEFT
-    DEFPUSHBUTTON   "About AZip", ID_Button_About_Azip, 145, 142, 64, 19, 0, WS_EX_LEFT
+    LTEXT           "Ratio: 100%", Comp_ratio, 211, 23, 48, 10, SS_LEFT, WS_EX_LEFT
+    LTEXT           "Entries...", 02, 14, 40, 78, 13, SS_LEFT, WS_EX_LEFT
+    LTEXT           "# entries", Numb_entries, 97, 40, 84, 13, SS_LEFT, WS_EX_LEFT
+    CONTROL         "", Stats_list, WC_LISTVIEW, WS_TABSTOP | WS_BORDER | LVS_ALIGNLEFT | LVS_REPORT, 14, 56, 305, 115, WS_EX_LEFT
+    AUTOCHECKBOX    "Show all known formats", Show_all_Formats, 15, 176, 99, 19, 0, WS_EX_LEFT
+    DEFPUSHBUTTON   "OK", IDOK, 140, 176, 64, 19, 0, WS_EX_LEFT
+    DEFPUSHBUTTON   "About AZip", ID_Button_About_Azip, 255, 176, 64, 19, 0, WS_EX_LEFT
 }
 
 
