--- a/gwindows/azip.rc
+++ b/gwindows/azip.rc
@@ -239,7 +239,7 @@ FONT 8, "Ms Shell Dlg"
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 Drop_files_box DIALOG 0, 0, 337, 119
 STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP
-CAPTION "File(s) dropped or right-clicked from Explorer"
+CAPTION "Non-Zip file(s) dropped, right-clicked, or opened from Explorer"
 FONT 8, "Ms Shell Dlg"
 {
     ICON            Plus_icon, IDC_STATIC, 2, 2, 21, 20, SS_ICON, WS_EX_LEFT
